namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foundry-idp
  labels:
    name: foundry-idp
    environment: production
