service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: foundry-idp
  labels:
    app: frontend
    component: web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: frontend
    component: web
