ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`foundry-idp.com`)
    kind: Rule
    services:
    - name: frontend-service
      port: 80
